Fix validation errors and too long lines

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -42,7 +42,7 @@ h6 {
 ----------------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
-    transition-delay: 0 !important;
+    transition-delay: 0s !important;
   }
 }
 
@@ -342,7 +342,7 @@ h6 {
 
 #hero h2 {
   color: #eee;
-  margin-bottom: 10px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 22px;
   text-shadow: rgb(3, 46, 27) 1px 0 10px;
 }
@@ -493,7 +493,7 @@ section {
 # About (layout from template)
 --------------------------------------------------------------*/
 .about {
-  background: url("https://res.cloudinary.com/djdc4rve5/image/upload/v1680371105/static/assets/img/about.e644dbf1976d.jpg");
+  background: url("https://res.cloudinary.com/djdc4rve5/image/upload/v1680546974/static/assets/img/my-img/hero-about_pufsm1.jpg");
   background-size: cover;
   position: relative;
   padding: 80px 0;
@@ -642,7 +642,7 @@ section {
 .index-page {
   min-height: 100%;
   position: relative;
-  background: url("https://res.cloudinary.com/djdc4rve5/image/upload/v1680468035/static/assets/img/my-img/index-page.3aee087cd39e.jpg") no-repeat center center fixed;
+  background: url("https://res.cloudinary.com/djdc4rve5/image/upload/v1680546974/static/assets/img/my-img/index_arhdga.jpg") no-repeat center center fixed;
   box-shadow: inset 0 0 0 1000px rgba(35, 35, 35, 0.775);
   background-size: cover;
 }
@@ -880,7 +880,7 @@ text-align: center;
 
 #violet h2 {
   color: #eee;
-  margin-bottom: 10px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 22px;
   text-shadow: rgb(83, 95, 89) 1px 0 10px;
 }
@@ -995,7 +995,7 @@ text-align: center;
 
 #green h2 {
   color: #eee;
-  margin-bottom: 10px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 22px;
   text-shadow: rgb(3, 46, 27) 1px 0 10px;
 }
@@ -1111,7 +1111,7 @@ text-align: center;
 
 #orange h2 {
   color: #eee;
-  margin-bottom: 10px 0 0 0;
+  margin: 10px 0 0 0;
   font-size: 22px;
   text-shadow: rgb(3, 46, 27) 1px 0 10px;
 }
